--- a/index.html
+++ b/index.html
@@ -11,48 +11,64 @@
 </head>
 
 <body>
-  <div class="flex-container-column">
-    <div id="hTags">
-      <h1>This is an &lt;h1&gt;</h1>
-      <h2>This is an &lt;h2&gt;</h2>
-      <h3>This is an &lt;h3&gt;</h3>
-      <h4>This is an &lt;h4&gt;</h4>
-      <h5>This is an &lt;h5&gt;</h5>
-      <h6>This is an &lt;h6&gt;</h6>
+  <div id="root" class="flex-container-row">
+
+
+    <div id="navbar-left" class="flex-container-column">navbar here</div>
+
+    <div id="display-stuff" class="flex-container-column">
+      <div id="text-container" class="flex-container-column">
+        <div id="hTags">
+          <h1>This is an &lt;h1&gt;</h1>
+          <h2>This is an &lt;h2&gt;</h2>
+          <h3>This is an &lt;h3&gt;</h3>
+          <h4>This is an &lt;h4&gt;</h4>
+          <h5>This is an &lt;h5&gt;</h5>
+          <h6>This is an &lt;h6&gt;</h6>
+        </div>
+        <div id="pTags">
+          <p>This is a &lt;p&gt;</p>
+          <br />
+          <p class="textRed">This is a textRed or warning</p>
+          <br />
+          <p class="textDarkRed background-white">This is a textDarkRed with background-white</p>
+          <br />
+          <p class="textLightGreen">This is a textLightGreen</p>
+          <br />
+          <p class="textGreen">This is a textGreen</p>
+          <br />
+          <p class="textBlue">This is a textBlue</p>
+          <br />
+          <p class="textYellow">This is a textYellow</p>
+          <br />
+          <p class="textOrange">This is a textOrange</p>
+          <br />
+          <p class="textWhite background-black">This is a textWhite with background-black</p>
+          <br />
+          <p class="textBlack background-white">This is a textBlack with background-white</p>
+          <br />
+          <p class="textGreenBlue">This is a textGreenBlue</p>
+          <br />
+          <p class="textPurple background-black">This is a textPurple with background-black</p>
+          <br />
+          <p class="textPink">This is a textPink</p>
+          <br />
+          <p class="textLightBlue">This is a textLightBlue</p>
+          <br />
+          <p><a id="demoLinkUnclicked" href="">This is an unclicked link</a></p>
+          <br />
+          <p><a href="">This is a clicked link</a></p>
+        </div>
+      </div>
+      <div id="size-demos" class="flex-container-column">
+        <h4>Hover over the box to see the become-different-box class in action</h4>
+        <div id="transition-box" class="become-different-box">this is a box</div>
+      </div>
     </div>
-    <div id="pTags">
-      <p>This is a &lt;p&gt;</p>
-      <br />
-      <p class="textRed">This is a textRed or warning</p>
-      <br />
-      <p class="textDarkRed background-white">This is a textDarkRed with background-white</p>
-      <br />
-      <p class="textLightGreen">This is a textLightGreen</p>
-      <br />
-      <p class="textGreen">This is a textGreen</p>
-      <br />
-      <p class="textBlue">This is a textBlue</p>
-      <br />
-      <p class="textYellow">This is a textYellow</p>
-      <br />
-      <p class="textOrange">This is a textOrange</p>
-      <br />
-      <p class="textWhite background-black">This is a textWhite with background-black</p>
-      <br />
-      <p class="textBlack background-white">This is a textBlack with background-white</p>
-      <br />
-      <p class="textGreenBlue">This is a textGreenBlue</p>
-      <br />
-      <p class="textPurple background-black">This is a textPurple with background-black</p>
-      <br />
-      <p class="textPink">This is a textPink</p>
-      <br />
-      <p class="textLightBlue">This is a textLightBlue</p>
-      <br />
-      <p><a id="demoLinkUnclicked" href="">This is an unclicked link</a></p>
-      <br />
-      <p><a href="">This is a clicked link</a></p>
-    </div>
+
+
+
+
   </div>
 </body>
 
