--- a/index.html
+++ b/index.html
@@ -80,12 +80,85 @@
         </div>
       </div>
 
+
+      <div>
+        <p>Open modal button is implemented with the <b>modal-button</b> class. It will only work on the first instance
+          of the button.</p>
+        <!-- Trigger/Open The Modal -->
+        <button id="openBtn" class="modal-button">Open Modal</button>
+
+        <!-- The Modal -->
+        <div id="theModal" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>This is used by putting the class <b>modal</b> in an element. It will only work on the first <b>modal</b>
+              element on the page..</p>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div id="slideshow">
+        <p>The slideshow is made with a div of class <b>slideshow-container</b> which then holds a number of divs, one
+          for each image, and each having the classes <b>slide</b> and <b>fade</b>.</p>
+        <p>Each div will have a div with class <b>numbertext</b> to hold what number of image it is. Then an image tag
+          with class <b>slide-img</b>. There will also be a following div of class <b>text</b> for the optional image
+          caption.</p>
+        <p>Two a tags at the bottom, one class <b>prev</b> and the other <b>next</b>. Each has an
+          <b>onClick="plusSlides()"</b>. Previous will have a -1 passed in and next will have a 1 passed in.
+        </p>
+        <p>Outside of the slideshow container theres wil be another div with class <b>dot-holder</b> with a span for
+          each dot each having class <b>dot</b> and an <b>onClick="currentSlide()"</b> with the corresponding slide
+          number passed in.
+        </p>
+        <div class="slideshow-container">
+
+          <!-- Full-width images with number and caption text -->
+          <div class="slide fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="img1.jpg" class="slide-img">
+            <div class="text">Caption Text</div>
+          </div>
+
+          <div class="slide fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="img2.jpg" class="slide-img">
+            <div class="text">Caption Two</div>
+          </div>
+
+          <div class="slide fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="img3.jpg" class="slide-img">
+            <div class="text">Caption Three</div>
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div class="dot-holder">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
+      </div>
+
     </div>
 
 
 
-
   </div>
+
+
+
+
+  <script src="./script.js"></script>
 </body>
 
 </html>
