added images for carousel

--- a/index.html
+++ b/index.html
@@ -116,32 +116,32 @@
         </p>
         <div class="slideshow-container">
 
-          <!-- Full-width images with number and caption text -->
+          <!-- images, captoins and numbers, full widthse -->
           <div class="slide fade">
             <div class="numbertext">1 / 3</div>
-            <img src="img1.jpg" class="slide-img">
-            <div class="text">Caption Text</div>
+            <img src="./assets/heritage.jpg" class="slide-img">
+            <div class="text">Caption Text: Heritage</div>
           </div>
 
           <div class="slide fade">
             <div class="numbertext">2 / 3</div>
-            <img src="img2.jpg" class="slide-img">
-            <div class="text">Caption Two</div>
+            <img src="./assets/sorceress.jpg" class="slide-img">
+            <div class="text">Caption Two: Sorceress</div>
           </div>
 
           <div class="slide fade">
             <div class="numbertext">3 / 3</div>
-            <img src="img3.jpg" class="slide-img">
-            <div class="text">Caption Three</div>
+            <img src="./assets/venenum.png" class="slide-img">
+            <div class="text">Caption Three: In Cauda Venenum</div>
           </div>
 
-          <!-- Next and previous buttons -->
+          <!-- next/prev button arrows -->
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
           <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
 
-        <!-- The dots/circles -->
+        <!-- circledots at bottom -->
         <div class="dot-holder">
           <span class="dot" onclick="currentSlide(1)"></span>
           <span class="dot" onclick="currentSlide(2)"></span>
